--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,14 @@
+@import url('./theme.css');
+/* :root {
+    --midblue: #006BB8;
+} */
 /* TODO Add site wide styles */
 .btn {
-    background-color: #006BB8;
+    background-color: var(--midblue);
     color: white;
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #006BB8;
-}
-html {
-    font-family: Helvetica, Arial, sans-serif;
 }
 
 .form-errors {
