--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -5,5 +5,14 @@
     background-size: cover;
     border-radius: 16px;
     box-shadow: 3px 3px 6px;
-    margin: 0 auto;
+    margin: 50px auto;
+    
+}
+
+#splash-text{
+    position: relative;
+    top: 85%;
+    left: 50px;
+    color: var(--lightbg);
+    
 }
