--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,8 +6,15 @@
     height: 7px;
     margin: 0 auto;
     padding: 0 15px;
-
 }
+.left-nav-links {
+    display: flex;
+}
+.left-nav-links li {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
 nav {
     display: flex;
     width: 60%;
