--- a/frontend/src/components/Upload/Upload.css
+++ b/frontend/src/components/Upload/Upload.css
@@ -20,3 +20,10 @@
     border-radius: 5px;
     color: var(--darkblue);
 }
+
+.row-img {
+    width: 50px;
+    height: 50px;
+    box-shadow: 1px 1px 2px var(--lightblue);
+    border-radius: 3px;
+}
