--- a/frontend/src/components/Upload/Upload.css
+++ b/frontend/src/components/Upload/Upload.css
@@ -40,7 +40,8 @@
     margin:0 auto;
     
     justify-content: space-between;
-    border:1px black solid;
+    border-top : 1px var(--lightindigofade) solid;
+    border-bottom : 2px var(--lightpurple) solid;
 }
 .track-button-holder{
     position: relative;
