css for comment display is decent

--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -10,6 +10,23 @@
 
 .comment-display{
     margin: 0 auto;
-    width: 50%;
-    border: 1px solid black;
+    width: 70%;
+}
+
+.comment-user{
+    font-size: .7em;
+    padding-left: 38px;
+    color: var(--lightblue);
+}
+
+.comment-body{
+    font-size: .75em;
+    padding-left: 52px;
+    padding-right: 25px;
+
+}
+
+.comment-row{
+    border-top : 1px var(--lightindigofade) solid;
+    border-bottom : 1px var(--lightpurple) solid;
 }
