--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -29,4 +29,13 @@
 .comment-row{
     border-top : 1px var(--lightindigofade) solid;
     border-bottom : 1px var(--lightpurple) solid;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+.comment-delete-btn{
+    position: relative;
+    top: 15px;
+    right: 15px;
 }
