--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -8,6 +8,8 @@
     --lightestfoam: #CFE6DF;
     --lightestgreen: #E5FEE4;
 
+    --lightishblue: #a2b3ca;
+
     --lightpurple: #764878;
     --lightindigo: #7665A6;
     --lightblue: #5F748F;
