--- a/frontend/src/components/SongSquare/SongSquare.css
+++ b/frontend/src/components/SongSquare/SongSquare.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;;
     border-radius: 5px;
     box-shadow: none;
     transition: 0.3s;
