--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,14 +1,14 @@
-form {
+/* form {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: fit-content;
     justify-content: space-between;
-    border: 2px solid var(--midblue);
-    border-radius: 30px;
-    box-shadow: 2px 2px 10px var(--lightblue);
+    border: .5px solid var(--lightishblue);
+    border-radius: 5px;
+    box-shadow: 1px 1px 25px var(--lightblue);
     width: 30%;
-    margin: 100px auto ;
+    margin: 10px auto;
 }
 label {
     display:flex;
@@ -27,7 +27,7 @@ input {
 
 button {
     margin-bottom: 30px;
-}
+} */
 
 .login-btn {
     margin: 0 10px 30px 10px;
