--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -2,6 +2,12 @@
     font-family: Helvetica, Arial, sans-serif;
     background-color: var(--lightbg);
 
+
+
+            --backindigo: rgba(194, 187, 217, 0.0075);
+            --backblue:rgba(179, 190, 206, 0.0075);
+            --backfoam: rgba(188, 212, 210, 0.0075);
+
     --lightestpurple: #F9E3FF;
     --lightestindigo: #DFDCF5;
     --lightestblue: #F1F8FD;
