--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -2,7 +2,7 @@
     font-family: Helvetica, Arial, sans-serif;
     background-color: var(--lightbg);
 
-
+--inputindigo: rgba(194, 187, 217, 0.75);
 
             --backindigo: rgba(194, 187, 217, 0.0075);
             --backblue:rgba(179, 190, 206, 0.0075);
