--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,7 +74,10 @@ select, input {
     border-radius: 2px;
     box-shadow: 0px 0px 15px var(--inputindigo);
 }
-
+select:focus, input:focus{
+    outline: none;
+    box-shadow: 1px 1px 6px var(--lightindigo);
+}
 
 button {
     margin-bottom: 30px;
