added an overlay on the homepage

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,11 +1,12 @@
 .cover-image {
     background-image: url(https://images.pexels.com/photos/164828/pexels-photo-164828.jpeg);
-    width: 700px;
-    height: 350px;
+    position: relative;
+    width: 800px;
+    height: 400px;
     background-size: cover;
     border-radius: 16px;
     box-shadow: 3px 3px 6px;
-    margin: 50px auto;
+    margin: 100px auto;
     
 }
 
@@ -15,4 +16,16 @@
     left: 50px;
     color: var(--lightbg);
     
+}
+
+.splash-overlay {
+    position: relative;
+    width: 800px;
+    height: 400px;
+background: linear-gradient(217deg, rgba(196,185,228,0.15), rgba(185,226,221,0.15) 70.71%),
+            linear-gradient(127deg, rgba(185,226,221,0.15), rgba(189,204,225,0.15) 70.71%),
+            linear-gradient(336deg, rgba(189,204,225,0.15), rgba(196,185,228,0.15) 70.71%);
+    border-radius: 16px;
+    margin: 0 auto; 
+    top: -500px;
 }
