--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -10,6 +10,13 @@
     
 }
 
+:root {
+    --footer1: rgb(109, 105, 126);
+    --footer2: rgb(106, 120, 133);
+    --footertext: #c4d0e1;
+    
+}
+
 #splash-text{
     position: relative;
     top: 85%;
@@ -28,4 +35,30 @@ background: linear-gradient(217deg, rgba(196,185,228,0.15), rgba(185,226,221,0.1
     border-radius: 16px;
     margin: 0 auto; 
     top: -500px;
+}
+
+.footer-backer{
+    position: fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    height: 25px;
+    background: linear-gradient(217deg, var(--footer1), var(--footer2) 70.71%),
+            linear-gradient(127deg, var(--footer2), var(--footer1) 70.71%);
+    margin: 0;
+
+}
+.footer {
+    color: var(--midpurple);
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    margin: 5px auto;
+}
+
+.footer li, .footer a{
+    color: var(--footertext);
+    font-size: 12px;
+    font-weight: 300;
 }
