--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -14,6 +14,7 @@
     --lightestfoam: #CFE6DF;
     --lightestgreen: #E5FEE4;
 
+    
     --lightishblue: #a2b3ca;
 
     --lightpurple: #764878;
@@ -41,6 +42,7 @@
     --darkestgreen: #063309;
 
     --lightbg: #F1F8FD;
+    --footerbg: #215185;
 
     --visitedlink: #D5DCE0;
     --lightindigofade: rgba(118, 101, 166, .5);
